oshrun failure message more verbose

--- a/src/shmemc/oshrun.in
+++ b/src/shmemc/oshrun.in
@@ -29,7 +29,13 @@ fi
 
 if [ -z "$launcher" ]
 then
-    echo "$progname: no launcher found, tried $LAUNCHERS"
+    echo "$progname: no launcher found, tried:"
+    echo
+    for L in $LAUNCHERS
+    do
+        echo "        $L"
+    done
+    echo
     exit 1
 fi     
 
