make sure status has a defined value

--- a/src/shmemc/oshrun.in
+++ b/src/shmemc/oshrun.in
@@ -55,7 +55,10 @@ if ($pid) {
     }
   }
 
-  my $status;
+  #
+  # assume worst; if app is good this will later be 0
+  #
+  my $status = 1;
 
   if ($ok) {
     $status = system $launcher, @ARGV;
