--- a/src/shmemc/oshrun.in
+++ b/src/shmemc/oshrun.in
@@ -80,10 +80,10 @@ sub prrte_shutdown {
   close $prrte_pipe;
 
   if ($killed == $prrte_pid) {
-    debug("PRRTE shut down (pid $prrte_pid)");
+    debug("PRRTE:$prrte_pid: shut down");
   }
   else {
-    die "$progname: couldn't kill PRRTE daemon (pid $prrte_pid): $!";
+    die "$progname:$prrte_pid: couldn't kill PRRTE daemon: $!";
   }
 }
 
@@ -99,7 +99,7 @@ sub prrte_launch {
     die "$progname: failed to run PRRTE daemon: $!";
   }
 
-  debug("PRRTE wait (pid $prrte_pid)");
+  debug("PRRTE:$prrte_pid: starting up");
 
   #
   # parent waits for daemon to be ready, then launches user app
@@ -122,7 +122,7 @@ sub prrte_launch {
 	", should not be here";
     }
 
-    debug("PRRTE ready (pid $prrte_pid)");
+    debug("PRRTE:$prrte_pid: ready");
 
     #
     # assume worst; if app is good this will later be 0
