Don't fail badly if Memoize module not available

--- a/src/shmemc/oshrun.in
+++ b/src/shmemc/oshrun.in
@@ -52,8 +52,10 @@ if ($launcher eq '') {
 # still nothing, can we find something?
 #
 
-use Memoize;
-memoize('which');
+eval "use Memoize";
+if(! $@) {
+  memoize('which');
+}
 
 sub which {
   my $f = shift;
