Be slightly stricter about matching the last compomnent of the launcher path

--- a/src/shmemc/oshrun.in
+++ b/src/shmemc/oshrun.in
@@ -91,7 +91,7 @@ if ($launcher eq '') {
 
     if ($L eq 'prun') {
       my $pr = $pl;
-      $pr =~ s/prun$/prte/;
+      $pr =~ s%/prun$%/prte%;
       if ( -x $pr ) {
         debug("found daemon in \"$pr\"");
       }
