--- a/src/shmemc/oshrun.in
+++ b/src/shmemc/oshrun.in
@@ -22,12 +22,16 @@ if (defined $ENV{$debug_env}) {
   $debug = ($d =~ /^[y1]/);
 }
 
-my $do_effect = 1;
+my $do_effect;
+
 eval 'use Term::ANSIColor';
 if ($@) {
   $do_effect = 0;
 }
-$do_effect = 0 unless -t STDERR;
+else {
+  # only use effects on terminals
+  $do_effect = ( -t STDERR );
+}
 
 sub debug {
   if ($debug) {
