--- a/src/shmemc/oshrun.in
+++ b/src/shmemc/oshrun.in
@@ -163,17 +163,19 @@ my $prte_pid;
 #
 
 sub prrte_shutdown {
+  my $pid = shift;
+
   #
   # shut down starter
   #
-  kill TERM => $prte_pid;
-  my $killed = waitpid($prte_pid,0);
+  kill TERM => $pid;
+  my $killed = waitpid($pid,0);
 
-  if ($killed == $prte_pid) {
-    debug("PRRTE:$prte_pid: shut down");
+  if ($killed == $pid) {
+    debug("PRRTE:$pid: shut down");
   }
   else {
-    die "$progname:$prte_pid: couldn't kill PRRTE starter: $!";
+    die "$progname:$pid: couldn't kill PRRTE starter: $!";
   }
 }
 
@@ -207,7 +209,7 @@ sub prrte_launch {
     }
 
     if (! $ready) {
-      prrte_shutdown();
+      prrte_shutdown($prte_pid);
 
       die "$progname: internal error at line " .
         __LINE__ .
@@ -236,7 +238,7 @@ my $is_prun = basename($launcher) eq 'prun';
 if ($is_prun) {
   $err = prrte_launch();
 
-  prrte_shutdown();
+  prrte_shutdown($prte_pid);
 }
 else {
   $err = bare_launch();
