--- a/configure.ac
+++ b/configure.ac
@@ -73,8 +73,8 @@ m4_include([config/m4/ucx.m4])
 
 m4_include([config/m4/confargs.m4])
 
-# not used at present
-# m4_include([config/m4/attribute_aligned.m4])
+m4_include([config/m4/ax_gcc_func_attribute.m4])
+m4_include([config/m4/attribute_checks.m4])
 
 # c++ -specific checks
 m4_include([config/m4/cxx.m4])
