inline threading asbtraction - all routines are tiny

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -12,8 +12,7 @@ LIBSHMEMC_SOURCES         = \
 				locks.c \
 				readenv.c \
 				shmemc-init.c \
-				state.c \
-				threading.c
+				state.c
 
 #
 # -- begin: UCX sources --
